Fix back arrow vertical align

--- a/apps/firestorm_web/web/static/css/components/_navigation-menu.scss
+++ b/apps/firestorm_web/web/static/css/components/_navigation-menu.scss
@@ -2,6 +2,9 @@
   padding: 0.5rem;
   background: $white;
   box-shadow: 0 1.5px 4px $shadow-color;
+  a {
+    vertical-align: middle;
+  }
   > ul {
     float: right;
     padding: 0.5rem;
